--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -1,3 +1,4 @@
+name: Acknowledge Issue
 on:
   issues:
     types: [opened]
@@ -6,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v3
+        name: Issue Thanks Message
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
