--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -1,20 +1,18 @@
-name: Acknowledge Issue
 on:
   issues:
     types: [opened]
+
 jobs:
   comment:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/github-script@v3
-        name: Issue Thanks Message
+      - uses: actions/github-script@v4
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              labels: ['Triage'],
-              body: '👋 Thanks for reporting!'
+              body: '👋 Welcome and Thanks for Reporting!',
+              labels: ['Triage']
             })
