--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,13 @@
 name: "Create Release"
 on:
-  schedule:
-    - cron: '55 23 28 */1 *'
+  workflow_run:
+    workflows:
+      - Tagging
+    types:
+      - completed
+    branch:
+      - master
+  workflow_dispatch:
 
 jobs:
   release:
