--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
           echo "DATE=${DATE}" >> $GITHUB_ENV
           echo "TAG=$(echo `git tag -l ${DATE}`)" >> $GITHUB_ENV
       - name: Create Release
-        uses: actions/github-script@v
+        uses: actions/github-script@v6
         with:
           github-token: ${{ github.token }}
           script: |
