--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
       - Tagging
     types:
       - completed
-    branch:
+    branches:
       - main
   workflow_dispatch:
 
@@ -32,7 +32,9 @@ jobs:
                 owner, repo,
                 tag_name: tag,
                 title: tag,
+                name: tag,
                 draft: false,
+                make_latest: "true",
                 target_commitish: sha
               });
               release_id = release.data.id;
